objects/LAT_ScheduleC__c.object
<CustomObject>
    <description>Clasification of products</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the record is available</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>KeyBrand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KeyBrand</label>
        <referenceTo>LAT_KeyBrand__c</referenceTo>
        <relationshipLabel>ScheduleC</relationshipLabel>
        <relationshipName>LAT_ScheduleC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_IsAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LAT_IsAdmin</label>
        <type>Checkbox</type>
    </fields>
    <label>ScheduleC</label>
    <listViews>
        <fullName>AR_todos</fullName>
        <columns>NAME</columns>
        <columns>ExternalId__c</columns>
        <columns>Active__c</columns>
        <columns>KeyBrand__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ExternalId__c</field>
            <operation>startsWith</operation>
            <value>6-</value>
        </filters>
        <label>AR Todos</label>
        <language>es_MX</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>KeyBrand__c</columns>
        <columns>Key__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>UY_All</fullName>
        <columns>NAME</columns>
        <columns>ExternalId__c</columns>
        <columns>Active__c</columns>
        <columns>KeyBrand__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ExternalId__c</field>
            <operation>startsWith</operation>
            <value>5-</value>
        </filters>
        <label>UY Todos</label>
        <language>es_MX</language>
    </listViews>
    <nameField>
        <label>ScheduleC Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ScheduleC</pluralLabel>
    <recordTypes>
        <fullName>LAT_AR_Standard</fullName>
        <active>true</active>
        <label>AR Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_BR_Standard</fullName>
        <active>true</active>
        <label>BR Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_MX_Standard</fullName>
        <active>true</active>
        <label>MX Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_UY_Standard</fullName>
        <active>true</active>
        <label>UY Standard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>